--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,7 @@ djoser==2.2.3
 Pillow
 reportlab
 isort==5.13.2
-python-dotenv==1.0.1 
+python-dotenv==1.0.1
+gunicorn==20.1.0
+django-cors-headers==3.13.0
+psycopg2-binary==2.9.3
