--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,16 +1,27 @@
 server {
-    listen 80;
-    client_max_body_size 10M;
+  listen 80;
+  index index.html; 
+  server_tokens off;
+  client_body_buffer_size 0;  
 
-    location /api/docs/ {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/redoc.html;
-    }
-    
-    location / {
-        root /usr/share/nginx/html;
-        index  index.html index.htm;
-        try_files $uri /index.html;
-      }
+  location /api/ {
+    client_max_body_size 20M;
+    proxy_set_header Host $http_host;
+    proxy_pass http://backend:8080/api/;
+  }
 
+  location /admin/ {
+    client_max_body_size 20M;
+    proxy_set_header Host $http_host;
+    proxy_pass http://backend:8080/admin/;
+  }  
+
+  location /media/ {
+    alias /media/;
+  }
+
+  location / {
+    alias /staticfiles/;
+    try_files $uri $uri/ index.html =404;
+  }
 }
