--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,8 +1,6 @@
 server {
   listen 80;
-  index index.html; 
   server_tokens off;
-  client_body_buffer_size 0;  
 
   location /api/ {
     client_max_body_size 20M;
@@ -21,7 +19,8 @@ server {
   }
 
   location / {
-    alias /staticfiles/;
+    alias /static/;
+    index index.html;
     try_files $uri $uri/ index.html =404;
   }
 }
