--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -122,7 +122,10 @@ jobs:
           key: ${{ secrets.SSH_KEY }} 
           passphrase: ${{ secrets.SSH_PASSPHRASE }} 
           script: | 
-            cd foodgram  
+            cd foodgram
+            if [ -f docker-compose.production.yml ]; then 
+              rm docker-compose.production.yml 
+            fi 
             sudo docker compose -f docker-compose.production.yml down 
             sudo docker compose -f docker-compose.production.yml up -d 
             sudo docker compose -f docker-compose.production.yml exec backend python manage.py makemigrations 
