--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,6 @@ python-dotenv==1.0.1
 gunicorn==20.1.0
 django-cors-headers==3.13.0
 psycopg2-binary==2.9.3
-decouple
+python-decouple
 flake8
 flake8-isort
