--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -2,6 +2,11 @@ server {
   listen 80;
   server_tokens off;
 
+  location /s/ {
+    proxy_set_header Host $host;
+    proxy_pass http://backend:8080/s/;
+  }
+
   location /api/ {
     client_max_body_size 20M;
     proxy_set_header Host $http_host;
